# jupyter-modularize

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: Demo.ipynb  Untitled.ipynb  my_module2.py
src/jupyter_modularize/: __init__.py
